[FIX] Error with overflow-y at Rebate

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -10,12 +10,6 @@
     --swiper-navigation-size: 10px;
 }
 
-body {
-    overflow: auto;
-    -ms-overflow-style: none; /* IE 11 */
-    scrollbar-width: none; /* Firefox 64 */
-}
-
 ::-webkit-scrollbar {
     width: 0; /* Remove scrollbar space */
     background: transparent; /* Optional: just */
